功能完善与修复: 外置登录/整合包/Terracotta联机/崩溃修复
- LittleSkin/Microsoft 外置登录: Yggdrasil + OAuth + 皮肤上传
- 整合包: ModpackInstaller 支持 + 搜索/版本过滤
- Terracotta 陶瓦联机: native库 + 面板 UI
- 崩溃修复: jre21回退(StrToI), lwjgl Monitor API, options防护
- lwjgl.jar: 补全 glfwGetMonitorName 等17方法
- GameLaunch: 多JRE选择修正, authlib-injector注入